[package]
name = "betterjeb"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
krpc-client = { git = "https://github.com/kladd/krpc-client", features = [ "tokio" ] }
tokio = { version = "1.44.1", features = ["full"] }
